GNOME Bugzilla – Bug 708148
gtk_tree_view_get_path_at_pos mistakenly identifies column of initial pixels
Last modified: 2016-06-06 02:21:37 UTC
gtk_tree_view_get_path_at_pos() mistakenly identifies the first pixel of all but the first column in a tree view as belonging to the previous column. As a result, the returned x-coordinate relative to the cell background for these pixels is equal to the width of this background and therefore falls outside of the background. Patch attached.
Created attachment 255011 [details] [review] patch